tdf#93102 : resolved crash on enabling image contour

Change-Id: I59a07a62573b8d472d15f8594473e8e8d1077589
Reviewed-on: https://gerrit.libreoffice.org/17758
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>